src/tests/Loader/classloader/StaticVirtualMethods/NegativeTestCases/MethodBodyOnUnrelatedType.ilproj
<Project Sdk="Microsoft.NET.Sdk.IL">
  <PropertyGroup>
    <!-- Needed for CrossGenTest -->
    <RequiresProcessIsolation>true</RequiresProcessIsolation>

    <!-- Crossgen2 currently doesn't support this negative check - that should be fine as runtime behavior is undefined in the presence of invalid IL. -->
    <CrossGenTest>false</CrossGenTest>

    <!-- Testing TypeLoad/MissingMethod exceptions in situations that are expensive to detect -->
    <NativeAotIncompatible>true</NativeAotIncompatible>
  </PropertyGroup>
  <PropertyGroup>
    <DebugType>Full</DebugType>
  </PropertyGroup>
  <ItemGroup>
    <ProjectReference Include="../TypeHierarchy/TypeHierarchyCommonCs.csproj" />
    <Compile Include="$(MSBuildThisFileName).il" />
  </ItemGroup>
</Project>
